[gd_scene load_steps=20 format=3 uid="uid://daswfhvjsa7jh"]

[ext_resource type="Script" path="res://Scenes and Scripts/Game/Player/player.gd" id="1_pxkst"]
[ext_resource type="Texture2D" uid="uid://b27ibfyikph52" path="res://Assets/Art/Characters/Cari/Headshot/icon_cari1.PNG" id="1_uekr7"]
[ext_resource type="Texture2D" uid="uid://fji17txvsqan" path="res://Assets/Art/Characters/Cari/Headshot/icon_cari2.PNG" id="2_3hmks"]
[ext_resource type="AudioStream" uid="uid://dc1vs6qw5sspl" path="res://Assets/Sound/SFX/Foley/World/sfx_world_foley_footstep_var1.mp3" id="4_bip16"]
[ext_resource type="Texture2D" uid="uid://ctcnsi4vmixqr" path="res://Assets/Art/Characters/Carl/Headshot/icon_carl1.PNG" id="4_q3ciq"]
[ext_resource type="Texture2D" uid="uid://bwahyatf0uvai" path="res://Assets/Art/Characters/Carl/Headshot/icon_carl2.PNG" id="5_5msf1"]
[ext_resource type="AudioStream" uid="uid://blr4q41rjnya0" path="res://Assets/Sound/SFX/Foley/World/sfx_world_foley_footstep_var2.mp3" id="7_kcvgl"]
[ext_resource type="Texture2D" uid="uid://dm275h5fsqja2" path="res://Assets/Art/UI/Buttons/menu_button_mid.png" id="8_4ihoa"]
[ext_resource type="FontFile" uid="uid://dchkjqker6h15" path="res://Assets/Font/Margarine-Regular.ttf" id="9_xfhi7"]
[ext_resource type="Texture2D" uid="uid://b78qo42a06loa" path="res://Assets/Art/UI/Buttons/menu_button_dark.png" id="10_kga1h"]
[ext_resource type="Texture2D" uid="uid://cs0vi7dtksnoo" path="res://Assets/Art/UI/Buttons/menu_button_light.png" id="11_32exa"]
[ext_resource type="Texture2D" uid="uid://b1cnehfemkycx" path="res://Assets/Art/UI/Hole.png" id="12_qaies"]

[sub_resource type="SpriteFrames" id="SpriteFrames_hb2ux"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_uekr7")
}, {
"duration": 1.0,
"texture": ExtResource("2_3hmks")
}],
"loop": true,
"name": &"cari_animation",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_q3ciq")
}, {
"duration": 1.0,
"texture": ExtResource("5_5msf1")
}],
"loop": true,
"name": &"carl_animation",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_mykrf"]
radius = 43.8292

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_wl7cs"]
playback_mode = 1
streams_count = 2
stream_0/stream = ExtResource("4_bip16")
stream_0/weight = 1.0
stream_1/stream = ExtResource("7_kcvgl")
stream_1/weight = 1.0

[sub_resource type="Animation" id="Animation_ltsux"]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FadeAnimation:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(45, 50)]
}

[sub_resource type="Animation" id="Animation_ltvyy"]
resource_name = "fade_out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FadeAnimation:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(45, 50), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_0uxyh"]
resource_name = "new_animation"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_i0a4y"]
_data = {
"fade_in": SubResource("Animation_ltsux"),
"fade_out": SubResource("Animation_ltvyy"),
"new_animation": SubResource("Animation_0uxyh")
}

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_pxkst")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.2, 0.2)
sprite_frames = SubResource("SpriteFrames_hb2ux")
animation = &"cari_animation"

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_mykrf")

[node name="Footsteps" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_wl7cs")
volume_db = -12.0
bus = &"SFX"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="FadeAnimation" type="TextureRect" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1045.0
offset_top = -621.0
offset_right = 974.078
offset_bottom = 528.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(1044.93, 621.35)
texture = ExtResource("12_qaies")
expand_mode = 1
stretch_mode = 5
metadata/_edit_use_anchors_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer"]
libraries = {
"": SubResource("AnimationLibrary_i0a4y")
}

[node name="EnterPrompt" type="TextureRect" parent="CanvasLayer"]
visible = false
offset_left = 640.8
offset_top = 683.0
offset_right = 1552.8
offset_bottom = 990.0
scale = Vector2(0.7, 0.7)
texture = ExtResource("8_4ihoa")

[node name="Label" type="Label" parent="CanvasLayer/EnterPrompt"]
layout_mode = 0
offset_left = 47.0
offset_top = 49.0
offset_right = 863.0
offset_bottom = 269.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("9_xfhi7")
theme_override_font_sizes/font_size = 51
horizontal_alignment = 1

[node name="YesButton" type="TextureButton" parent="CanvasLayer/EnterPrompt"]
layout_mode = 0
offset_left = 6.0
offset_top = 305.0
offset_right = 653.0
offset_bottom = 526.0
scale = Vector2(0.7, 0.7)
texture_normal = ExtResource("8_4ihoa")
texture_pressed = ExtResource("10_kga1h")
texture_hover = ExtResource("11_32exa")
ignore_texture_size = true
stretch_mode = 4

[node name="Label" type="Label" parent="CanvasLayer/EnterPrompt/YesButton"]
layout_mode = 0
offset_left = 36.7347
offset_top = -3.06127
offset_right = 611.735
offset_bottom = 240.939
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("9_xfhi7")
theme_override_font_sizes/font_size = 170
text = "Ja"
horizontal_alignment = 1

[node name="NoButton" type="TextureButton" parent="CanvasLayer/EnterPrompt"]
layout_mode = 0
offset_left = 452.0
offset_top = 305.0
offset_right = 1099.0
offset_bottom = 523.72
scale = Vector2(0.7, 0.7)
texture_normal = ExtResource("8_4ihoa")
texture_pressed = ExtResource("10_kga1h")
texture_hover = ExtResource("11_32exa")
ignore_texture_size = true
stretch_mode = 4

[node name="Label" type="Label" parent="CanvasLayer/EnterPrompt/NoButton"]
layout_mode = 0
offset_left = 36.3266
offset_top = -3.06118
offset_right = 610.327
offset_bottom = 240.939
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("9_xfhi7")
theme_override_font_sizes/font_size = 170
text = "Nein"
horizontal_alignment = 1

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="finished" from="Footsteps" to="." method="_on_footsteps_finished"]
[connection signal="animation_finished" from="CanvasLayer/AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="button_up" from="CanvasLayer/EnterPrompt/YesButton" to="." method="_on_yes_button_button_up"]
[connection signal="button_up" from="CanvasLayer/EnterPrompt/NoButton" to="." method="_on_no_button_button_up"]
